cleaning underlying data scripts

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ quality checks/
 icons building.pptx
 archive/
 rsconnect/
+dictionary tidying/
+cwb_page_fr/
+fwb_page_fr/
+gap_page_fr/
+oecd update checklist.R
